Fix grid layout white space appearing in Safari

--- a/_sass/_blocks.scss
+++ b/_sass/_blocks.scss
@@ -1,7 +1,6 @@
 .content-block {
 position: relative;
 width: 100%;
-height: 100%;
 font-size: 1.125em; //18px/16px
 text-align: center;
 display: flex;
