--- a/_sass/_grid.scss
+++ b/_sass/_grid.scss
@@ -4,8 +4,27 @@
   flex-wrap: wrap;
 }
 
+
+.align-middle {
+  align-items: center;
+}
+
+.align-top {
+  align-items: flex-start;
+}
+
+.align-bottom {
+  align-items: flex-end;
+}
+
+.align-stretch {
+  align-items: stretch;
+}
+
+
 .column {
-  flex-basis: 100%;
+display: flex;
+flex-basis: 100%;
 
   @include medium {
     flex: 1;
